src/styles/global.css
@import url("https://fonts.googleapis.com/css2?family=Amiri&family=Lateef&display=swap");

:root[data-theme="light"] {
  --primary-color: #1f4e5f;
  --secondary-color: #e0c9a6;
  --text-color: #333;
  --background-color: #f7f3e8;
  --accent-color: #8c5e58;
}

:root[data-theme="dark"] {
  --primary-color: #88b3b5;
  --secondary-color: #3b3129;
  --text-color: #cfcfcf;
  --background-color: #1f1f1f;
  --accent-color: #a68d83;
}

.App {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

body {
  font-family: "Lateef", Arial, sans-serif;
  margin: 0;
  padding: 0;
  background-color: var(--background-color);
  color: var(--text-color);
}

header {
  background-color: var(--primary-color);
  padding: 15px;
  display: flex;
  align-items: center;
}

.dark-mode-toggle {
  background: transparent;
  border: none;
  cursor: pointer;
  font-size: 1.5rem;
  position: fixed;
  top: 1rem;
  right: 1rem;
  z-index: 1000;
}

.dark-mode-toggle:focus {
  outline: none;
}

.app-title {
  color: var(--secondary-color);
  margin: 0;
  font-size: 1.5em;
  font-family: "Amiri", serif;
  flex-grow: 1;
  text-align: center;
}

.menu-toggle {
  background: none;
  border: none;
  cursor: pointer;
  padding: 0;
  width: 30px;
  height: 30px;
  position: relative;
}

.menu-icon,
.menu-icon::before,
.menu-icon::after {
  content: "";
  display: block;
  width: 100%;
  height: 3px;
  background-color: var(--secondary-color);
  position: absolute;
  transition: all 0.3s;
}

.menu-icon::before {
  top: -8px;
}

.menu-icon::after {
  bottom: -8px;
}

.menu-toggle:focus {
  outline: none;
}

.menu-toggle:hover .menu-icon,
.menu-toggle:hover .menu-icon::before,
.menu-toggle:hover .menu-icon::after {
  background-color: #fff;
}

nav {
  background-color: var(--primary-color);
  position: fixed;
  top: 60px;
  left: -100%;
  width: 100%;
  height: calc(100% - 60px);
  transition: left 0.3s ease;
  z-index: 1000;
}

nav.open {
  left: 0;
}

nav ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

nav ul li {
  padding: 15px;
  border-bottom: 1px solid var(--secondary-color);
}

nav ul li:last-child {
  border-bottom: none;
}

nav ul li a {
  color: var(--secondary-color);
  text-decoration: none;
  font-size: 1.2em;
  display: block;
}

main {
  flex-grow: 1;
  padding: 20px;
  max-width: 600px;
  margin: 0 auto;
  width: 100%;
  box-sizing: border-box;
}

.container {
  background-color: #fff;
  padding: 20px;
  border-radius: 10px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  max-width: 800px;
  margin: 0 auto;
}

.title {
  color: var(--primary-color);
  text-align: center;
  font-family: "Amiri", serif;
  font-size: 2em;
  margin-bottom: 20px;
}

.subtitle {
  color: var(--accent-color);
  text-align: center;
  font-size: 1.2em;
  margin-top: -10px;
  margin-bottom: 20px;
}

.input {
  width: 100%;
  padding: 10px;
  margin-bottom: 10px;
  border: 2px solid var(--secondary-color);
  border-radius: 5px;
  font-size: 1em;
  box-sizing: border-box;
}

.input:focus {
  border-color: var(--primary-color);
  outline: none;
}

.button {
  background-color: var(--primary-color);
  border: none;
  color: #fff;
  padding: 10px 20px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 1em;
  margin: 4px 5px;
  cursor: pointer;
  border-radius: 5px;
  transition: background-color 0.3s ease, transform 0.2s;
}

.button:hover {
  background-color: var(--accent-color);
  transform: scale(1.05);
}

.error {
  color: #721c24;
  background-color: #f8d7da;
  border: 1px solid #f5c6cb;
  padding: 10px;
  border-radius: 5px;
  margin-top: 10px;
}

.share-button {
  display: flex;
  align-items: center;
  gap: 5px;
  background-color: var(--primary-color);
  color: white;
  border: none;
  padding: 8px 12px;
  border-radius: 5px;
  cursor: pointer;
}

.share-button:hover {
  background-color: var(--accent-color);
}

@media (min-width: 768px) {
  .container {
    padding: 15px;
  }

  .title {
    font-size: 1.5rem;
  }

  .subtitle {
    font-size: 1.2rem;
  }

  .menu-toggle {
    display: none;
  }

  .button {
    padding: 8px;
    font-size: 0.9rem;
  }

  nav {
    position: static;
    width: auto;
    height: auto;
    background-color: transparent;
  }

  nav ul {
    display: flex;
    justify-content: center;
  }

  nav ul li {
    border-bottom: none;
    padding: 0 15px;
  }

  .app-title {
    text-align: left;
  }
}

